# url_shortener

./: README.md  pyproject.toml
docs/: API.md
requirements/: base.txt  dev.txt
scripts/: migrate.py
src/url_shortener/: config.py  main.py
src/url_shortener/api/v1/: analytics.py
src/url_shortener/database/: base.py  models.py  session.py
src/url_shortener/schemas/: analytics.py  url.py
src/url_shortener/services/: analytics.py  security.py  url.py
src/url_shortener/utils/: geoip.py  keygen.py  visualization.py
tests/: conftest.py
tests/test_api/: test_analytics.py  test_urls.py
