[project]
name = "url_shortener"
version = "0.1.0"
description = "Сервис сокращения URL с аналитикой"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.21.0",
    "asyncpg>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pydantic>=1.10.0",
    "python-multipart>=0.0.5",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "redis>=4.5.0",
    "nanoid>=2.0.0",
    "matplotlib>=3.7.0",
    "geoip2>=4.6.0",
    "user-agents>=2.2.0",
    "python-dateutil>=2.8.0",
    "httpx>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "httpx>=0.23.0",
    "sqlalchemy2-stubs>=0.0.2",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "autoflake>=2.0.0",
]
